--- a/source/Fasciculus.Eve/Pages/PlanetsPage.xaml
+++ b/source/Fasciculus.Eve/Pages/PlanetsPage.xaml
@@ -37,9 +37,23 @@
                         <Label Text="{Binding Hub}" />
                     </HorizontalStackLayout>
                     <HorizontalStackLayout Spacing="14" Padding="0,14,0,0">
+                        <Label Text="Customs Tax Rate" WidthRequest="120" />
+                        <Label Text="{Binding CustomsTaxRate}" WidthRequest="60" HorizontalTextAlignment="End" />
+                        <Button Text="-" Command="{Binding DecrementCustomsTaxRateCommand}" />
+                        <Button Text="+" Command="{Binding IncrementCustomsTaxRateCommand}" />
+                    </HorizontalStackLayout>
+                    <HorizontalStackLayout Spacing="14" Padding="0,14,0,0">
+                        <Label Text="Sell Tax Rate" WidthRequest="120" />
+                        <Label Text="{Binding SellTaxRate}" WidthRequest="60" HorizontalTextAlignment="End" />
+                        <Button Text="-" Command="{Binding DecrementSellTaxRateCommand}" />
+                        <Button Text="+" Command="{Binding IncrementSellTaxRateCommand}" />
+                    </HorizontalStackLayout>
+                    <HorizontalStackLayout Spacing="14" Padding="0,28,0,0">
                         <Button Text="Start" Command="{Binding StartCommand}" WidthRequest="60" />
-                        <fasciculus:LongProgressInfoBar Source="{Binding BuyProgress}" WidthRequest="200" />
-                        <fasciculus:LongProgressInfoBar Source="{Binding SellProgress}" WidthRequest="200" />
+                        <Label Text="Buy Orders" IsVisible="{Binding IsRunning}" />
+                        <fasciculus:LongProgressInfoBar Source="{Binding BuyProgress}" WidthRequest="100" IsVisible="{Binding IsRunning}" />
+                        <Label Text="Sell Orders" IsVisible="{Binding IsRunning}" />
+                        <fasciculus:LongProgressInfoBar Source="{Binding SellProgress}" WidthRequest="100" IsVisible="{Binding IsRunning}" />
                     </HorizontalStackLayout>
                     <HorizontalStackLayout Spacing="14" Padding="0,14,0,4" IsVisible="{Binding HasProductions}">
                         <Label Text="Output" FontAttributes="Bold" WidthRequest="200" />
@@ -82,7 +96,7 @@
                         </CollectionView>
                     </HorizontalStackLayout>
                     <Border WidthRequest="440" HeightRequest="200" HorizontalOptions="Start" StrokeThickness="0">
-                        <ActivityIndicator IsRunning="{Binding StartCommand.IsRunning}" />
+                        <ActivityIndicator IsRunning="{Binding IsRunning}" />
                     </Border>
                 </VerticalStackLayout>
             </ScrollView>
