--- a/source/Fasciculus.Eve/Pages/IndustryPage.xaml
+++ b/source/Fasciculus.Eve/Pages/IndustryPage.xaml
@@ -13,9 +13,15 @@
             <ScrollView FlexLayout.Grow="1" Padding="14">
                 <VerticalStackLayout>
                     <HorizontalStackLayout Spacing="14">
-                        <Label Text="Industry System" VerticalTextAlignment="Center" />
+                        <Label Text="Industry System" VerticalTextAlignment="Center" WidthRequest="120" />
                         <Border Padding="0">
-                            <Picker ItemsSource="{Binding SolarSystems}" SelectedItem="{Binding SelectedSolarSystem}" WidthRequest="120" />
+                            <Picker ItemsSource="{Binding SolarSystems}" SelectedItem="{Binding SelectedSolarSystem}" WidthRequest="280" />
+                        </Border>
+                    </HorizontalStackLayout>
+                    <HorizontalStackLayout Spacing="14" Padding="0,7,0,0">
+                        <Label Text="Hauler" VerticalTextAlignment="Center" WidthRequest="120" />
+                        <Border Padding="0">
+                            <Picker ItemsSource="{Binding Haulers}" SelectedIndex="{Binding SelectedHauler}" WidthRequest="280" />
                         </Border>
                     </HorizontalStackLayout>
                 </VerticalStackLayout>
