--- a/source/Fasciculus.Eve/Pages/IndustryPage.xaml
+++ b/source/Fasciculus.Eve/Pages/IndustryPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:fasciculus="http://fasciculus.github.io/2024/maui"
              xmlns:pageModels="clr-namespace:Fasciculus.Eve.PageModels"
              xmlns:views="clr-namespace:Fasciculus.Eve.Views"
              x:Class="Fasciculus.Eve.Pages.IndustryPage"
@@ -12,20 +13,28 @@
             <views:NavBarView FlexLayout.Basis="44" />
             <ScrollView FlexLayout.Grow="1" Padding="14">
                 <VerticalStackLayout>
+                    <HorizontalStackLayout Spacing="14" Padding="0,0,0,7">
+                        <Label Text="Hub" WidthRequest="120" />
+                        <Label Text="{Binding Hub}" WidthRequest="320" />
+                    </HorizontalStackLayout>
                     <HorizontalStackLayout Spacing="14">
                         <Label Text="Industry System" VerticalTextAlignment="Center" WidthRequest="120" />
                         <Border Padding="0">
-                            <Picker ItemsSource="{Binding SolarSystems}" SelectedItem="{Binding SelectedSolarSystem}" IsEnabled="{Binding NotRunning}" WidthRequest="280" />
+                            <Picker ItemsSource="{Binding SolarSystems}" SelectedItem="{Binding SelectedSolarSystem}" IsEnabled="{Binding NotRunning}" WidthRequest="320" />
                         </Border>
                     </HorizontalStackLayout>
                     <HorizontalStackLayout Spacing="14" Padding="0,7,0,0">
                         <Label Text="Hauler" VerticalTextAlignment="Center" WidthRequest="120" />
                         <Border Padding="0">
-                            <Picker ItemsSource="{Binding Haulers}" SelectedIndex="{Binding SelectedHauler}" IsEnabled="{Binding NotRunning}" WidthRequest="280" />
+                            <Picker ItemsSource="{Binding Haulers}" SelectedIndex="{Binding SelectedHauler}" IsEnabled="{Binding NotRunning}" WidthRequest="320" />
                         </Border>
                     </HorizontalStackLayout>
-                    <HorizontalStackLayout Padding="0,7,0,0">
+                    <HorizontalStackLayout Spacing="14" Padding="0,7,0,0">
                         <Button Text="Start" Command="{Binding StartCommand}" WidthRequest="60" />
+                        <Label Text="Buy Orders" IsVisible="{Binding IsRunning}" />
+                        <fasciculus:LongProgressInfoBar Source="{Binding BuyProgress}" WidthRequest="100" IsVisible="{Binding IsRunning}" />
+                        <Label Text="Sell Orders" IsVisible="{Binding IsRunning}" />
+                        <fasciculus:LongProgressInfoBar Source="{Binding SellProgress}" WidthRequest="100" IsVisible="{Binding IsRunning}" />
                     </HorizontalStackLayout>
                 </VerticalStackLayout>
             </ScrollView>
