--- a/source/Fasciculus.Eve/Pages/IndustryPage.xaml
+++ b/source/Fasciculus.Eve/Pages/IndustryPage.xaml
@@ -2,8 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:fasciculus="http://fasciculus.github.io/2024/maui"
+             xmlns:models="clr-namespace:Fasciculus.Eve.Models;assembly=Fasciculus.Eve.Core"
              xmlns:pageModels="clr-namespace:Fasciculus.Eve.PageModels"
              xmlns:views="clr-namespace:Fasciculus.Eve.Views"
+             xmlns:controls="clr-namespace:Fasciculus.Eve.Controls"
              x:Class="Fasciculus.Eve.Pages.IndustryPage"
              x:DataType="pageModels:IndustryPageModel"
              Title="" Shell.NavBarIsVisible="False">
@@ -35,6 +37,22 @@
                         <fasciculus:LongProgressInfoBar Source="{Binding BuyProgress}" WidthRequest="100" IsVisible="{Binding IsRunning}" />
                         <Label Text="Sell Orders" IsVisible="{Binding IsRunning}" />
                         <fasciculus:LongProgressInfoBar Source="{Binding SellProgress}" WidthRequest="100" IsVisible="{Binding IsRunning}" />
+                    </HorizontalStackLayout>
+                    <HorizontalStackLayout Spacing="14" Padding="0,14,0,4" IsVisible="{Binding HasProductions}">
+                    </HorizontalStackLayout>
+                    <HorizontalStackLayout Spacing="14">
+                        <CollectionView ItemsSource="{Binding Productions}">
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate x:DataType="models:EveProduction">
+                                    <HorizontalStackLayout Spacing="14" Padding="0,3,0,4">
+                                        <Label Text="{Binding Name}" WidthRequest="200" />
+                                        <controls:IskLabel Value="{Binding Cost}" WidthRequest="60" />
+                                        <controls:IskLabel Value="{Binding Income}" WidthRequest="60" />
+                                        <controls:IskLabel Value="{Binding Profit}" WidthRequest="60" />
+                                    </HorizontalStackLayout>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
                     </HorizontalStackLayout>
                 </VerticalStackLayout>
             </ScrollView>
