--- a/source/Fasciculus.Eve/Views/NavBarView.xaml
+++ b/source/Fasciculus.Eve/Views/NavBarView.xaml
@@ -11,6 +11,7 @@
         <ImageButton Source="industry.png" Command="{Binding GoToCommand}" CommandParameter="//Industry" />
         <ImageButton Source="planets.png" Command="{Binding GoToCommand}" CommandParameter="//Planets" />
         <ImageButton Source="map.png" Command="{Binding GoToCommand}" CommandParameter="//Map" />
+        <ImageButton Source="skills.png" Command="{Binding GoToCommand}" CommandParameter="//Skills" />
     </VerticalStackLayout>
 
 </ContentView>
